Fix the GoDAM admin pages layout breaks for Safari browser

--- a/pages/godam/index.scss
+++ b/pages/godam/index.scss
@@ -158,7 +158,7 @@ $settings-page-breakpoint: 782px;
 					background: $settings-page-color-white;
 					padding: 1rem;
 					box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
-					transform: translateX(-100%);
+					transform: translateX(-120%);
 					overflow: auto;
 					transition: transform 0.3s ease-in-out;
 					z-index: 99999;
