--- a/pages/tools/index.scss
+++ b/pages/tools/index.scss
@@ -134,7 +134,7 @@ $tools-page-breakpoint: 782px;
 					background: $tools-page-color-white;
 					padding: 1rem;
 					box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
-					transform: translateX(-100%);
+					transform: translateX(-120%);
 					overflow: auto;
 					transition: transform 0.3s ease-in-out;
 					z-index: 99999;
